--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,15 @@
 version: "3.1"
 services:
+  app:
+    build: .
+    depends_on:
+      - database
+    ports:
+      - "3333:8080"
+    volumes:
+      - ./:/usr/src/app/
   database:
+    container_name: pg_container
     image: "postgres:14"
     environment:
       POSTGRES_USER: postgres
@@ -8,7 +17,12 @@ services:
       POSTGRES_DB: postgres
     ports:
       - "5432:5432"
-    volumes:
-      - database-data:/var/lib/postgresql/data/
-volumes:
-  database-data:
+  pgadmin:
+    container_name: pgadmin4_container
+    image: dpage/pgadmin4
+    restart: always
+    environment:
+      PGADMIN_DEFAULT_EMAIL: admin@admin.com
+      PGADMIN_DEFAULT_PASSWORD: root
+    ports:
+      - "5050:80"
