--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "homepage": "https://github.com/pikss86/work1#readme",
   "dependencies": {
+    "@fastify/postgres": "^5.1.0",
     "fastify": "^4.6.0",
     "pg": "^8.8.0"
   }
