--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,10 @@ services:
       - "3334:8080"
     volumes:
       - ./:/usr/src/app/
+    networks:
+      work1:
+        aliases:
+          - app
   database:
     hostname: postgres
     container_name: pg_container
@@ -20,7 +24,13 @@ services:
       - "5432:5432"
     volumes:
       - ./init.sql:/docker-entrypoint-initdb.d/init.sql
+    networks:
+      work1:
+        aliases:
+          - postgres
+
   pgadmin:
+    hostname: pgadmin
     container_name: pgadmin4_container
     image: dpage/pgadmin4
     restart: always
@@ -29,3 +39,10 @@ services:
       PGADMIN_DEFAULT_PASSWORD: root
     ports:
       - "5050:80"
+    networks:
+      work1:
+        aliases:
+          - pgadmin
+
+networks:
+  work1:
